--- a/DynamicSpriteBuilder/DynamicSpriteBuilder/DynamicSpriteBuilder.csproj
+++ b/DynamicSpriteBuilder/DynamicSpriteBuilder/DynamicSpriteBuilder.csproj
@@ -4,6 +4,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.8" />
+    <PackageReference Include="system.drawing.common" Version="4.5.0" />
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.4" />
